salvia_macro/tests/query_ui/fail/return_transitive_impl.stderr
error: #[query]: `impl Trait` syntax is not supported, consider returning concrete type
 --> $DIR/return_transitive_impl.rs:7:36
  |
7 | async fn f(_cx: &QueryContext) -> (impl Debug + Clone + Eq + 'static,) {
  |                                    ^^^^
